# Dragonfly

./: .gitignore  ARCHITECTURE.md  BROKER.md  CLAUDE.md  CROSS-APP.md  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml  release.yml  server-ci.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts  dragonfly-debug.keystore
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/main/res/xml/: dragonfly_widget_info.xml  (+1 more)
android/gradle/: libs.versions.toml
deploy/: README.md  redeploy.ps1
scripts/: synthetic_smoke.py
server/: .env.example  DEPLOY.md  Dockerfile  docker-entrypoint.sh  pyproject.toml  run.sh
server/alembic/: env.py
server/alembic/versions/: 0001_initial.py  0002_refresh_token_id.py  0003_weekly_digest.py
server/app/: config.py  limiter.py  main.py  maintenance.py  security.py
server/app/digest/: aggregator.py  narrator.py  scheduler.py  service.py
server/app/models/: digest.py  oauth.py  user.py
server/app/oidc/: clients.py  keys.py  service_clients.py  tokens.py
server/app/routers/: account.py  accounts.py  cross_app.py  digest.py  export.py  oidc.py  smoke.py
server/tests/: conftest.py  test_account.py  test_cross_app_token.py  test_digest.py  test_export.py  test_health.py  test_key_rotation.py  test_maintenance.py  test_oidc.py  test_registration.py  test_smoke_token.py
(+57 files in other folders)
