[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dragonfly-id"
version = "0.1.0"
requires-python = ">=3.11"
# The suite's identity provider (BROKER.md Phase 2). OIDC via Authlib; argon2id password hashing.
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.50.0",
    "sqlalchemy[asyncio]==2.0.51",
    "alembic==1.18.5",
    "asyncpg==0.31.0",
    "pydantic==2.13.4",
    "pydantic[email]==2.13.4",
    "pydantic-settings==2.14.2",
    "authlib==1.7.2",
    "cryptography==49.0.0",
    "argon2-cffi==25.1.0",
    "passlib==1.7.4",
    "httpx==0.28.1",
    "python-multipart==0.0.32",
    "greenlet==3.5.3",
    "slowapi==0.1.10",
    "email-validator==2.3.0",
    "itsdangerous==2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "httpx==0.28.1",
    "ruff==0.15.20",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
